--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>نظام إدارة المبيعاتz </title>
+    <title>نظام إدارة المبيعات </title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icon.ico">
 </head>
 <body>
 <div id="main-login-overlay" style="position: fixed; inset: 0; background: #1a202c; z-index: 9999; display: flex; align-items: center; justify-content: center; flex-direction: column; color: white;">
